@@ -9,7 +9,7 @@ public class OddEvenNumbers {
         List<Integer> numbers = Arrays.asList(1,4,83,80,65,28,21,34);
         List<Integer> oddList = numbers.stream()
                 .filter(e -> e%2!=0)
-                .collect(Collectors.toList());
+                .toList();
         List<Integer> evenList = numbers.stream()
                 .filter(e -> e%2==0)
                 .collect(Collectors.toList());
